--- a/src/views/admin/cargas/add.ejs
+++ b/src/views/admin/cargas/add.ejs
@@ -108,6 +108,7 @@
     <%- include('../../partials/footer') %>
   </div>
 
+  <!-- modales -->
   <div class="modal modal-blur fade" id="modal-info" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -190,9 +191,10 @@
               </h4>
               <h4 class="m-0 text-start">
                 Debe existir el fichero que se va a procesar en el directorio
-                m:/filcopy/02051143/FRAUDES
+                m:/filcopy/02051143/FORMULARIOS
               </h4>
             </h4>
+          </div>
         </div>
         <div class="modal-footer">
           <div class="w-100">
