--- a/src/views/admin/formularios/ades/index.ejs
+++ b/src/views/admin/formularios/ades/index.ejs
@@ -72,7 +72,7 @@
                   <table class="table table-vcenter table-striped sortable" id="tblUsuarios">
                     <thead>
                       <tr class="header">
-                        <th class="w-4"></th>
+                        <th class="w-5"></th>
                         <th>Nombre</th>
                         <th class="w-15">Oficina</th>
                         <th class="w-5"></th>
@@ -86,7 +86,7 @@
                       <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-                      <a href="#" id="vol" class="btn btn-white">Volver</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                     </div>
                   </div>
                 </div>
