--- a/src/views/admin/formularios/pendientes/index.ejs
+++ b/src/views/admin/formularios/pendientes/index.ejs
@@ -90,7 +90,7 @@
                       <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-                      <a href="#" id="volv" class="btn btn-white">Volver</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                     </div>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
                 <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="" id="del" method="POST">
+                <form action="" id="delet" method="POST">
                   <input type="hidden" id="idborr" name="idform" value="">
                   <button type="submit" class="btn btn-danger w-100">Borrar formulario</button>
                 </form>
@@ -162,7 +162,7 @@
                 <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="" id="asig" method="POST">
+                <form action="" id="asign" method="POST">
                   <input type="hidden" id="asig" name="idform" value="">
                   <button type="submit" class="btn btn-warning w-100">Asignar formulario</button>
                 </form>
