--- a/src/views/admin/tipos/index.ejs
+++ b/src/views/admin/tipos/index.ejs
@@ -122,7 +122,7 @@
                 <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="#" id="del" method="POST">
+                <form action="#" id="delet" method="POST">
                   <input type="hidden" id="idtipo" name="idtipo" value="">
                   <button type="submit" class="btn btn-danger w-100" id="btnUpdate">Borrar tipo</button>
                 </form>
