--- a/src/views/user/formularios/asignados/referencias/add.ejs
+++ b/src/views/user/formularios/asignados/referencias/add.ejs
@@ -25,8 +25,8 @@
 
 <body>
   <div class="page">
-    <%- include('../../../partials/header') %>
-    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
+    <%- include('../../../../partials/header') %>
+    <%- include('../../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -99,8 +99,8 @@
           </div>
         </div>
       </div>
-      <%- include('../../../partials/footer') %>
     </div>
+    <%- include('../../../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
