--- a/src/views/user/formularios/resueltos/referencias/index.ejs
+++ b/src/views/user/formularios/resueltos/referencias/index.ejs
@@ -57,10 +57,9 @@
                     <thead>
                       <tr class="header">
                         <th class="w-5"></th>
-                        <th class="w-6">Fecha</th>
+                        <th class="w-7">Fecha</th>
                         <th class="w-8">NIF</th>
                         <th>Tipo</th>
-                        <th class="w-5"></th>
                       </tr>
                     </thead>
                     <tbody id="table-body">
@@ -71,7 +70,7 @@
                       <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-                      <a href="" id="vol" class="btn btn-white">Volver</a>
+                      <a href="" id="volv" class="btn btn-white">Volver</a>
                     </div>
                   </div>
                 </div>                
