--- a/src/views/admin/formularios/asignados/referencias/edit.ejs
+++ b/src/views/admin/formularios/asignados/referencias/edit.ejs
@@ -25,8 +25,8 @@
 
 <body>
   <div class="page">
-    <%- include('../../../partials/header') %>
-    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
+    <%- include('../../../../partials/header') %>
+    <%- include('../../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -98,15 +98,14 @@
           </div>
         </div>
       </div>
-      <%- include('../../../partials/footer') %>
     </div>
+    <%- include('../../../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
   <script src="/js/admin/formularios/asignados/referencias/addEdit.js"></script>
   <script>
-    const elemAdd = document.getElementById('upd');
-    elemAdd.setAttribute('action', `/admin/formularios/asignados/referencias/update?part=${getCookie('filtro')}`)
+    document.getElementById('upd').setAttribute('action', `/admin/formularios/asignados/referencias/update?part=${getCookie('filtro')}`)
   </script>
 </body>
 
