--- a/src/views/admin/formularios/resueltos/index.ejs
+++ b/src/views/admin/formularios/resueltos/index.ejs
@@ -91,7 +91,7 @@
                       <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-                      <a href="#" id="res" class="btn btn-white">Volver</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                     </div>
                   </div>
                 </div>
@@ -118,7 +118,7 @@
             <path d="M12 9v2m0 4v.01"></path>
             <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
           </svg>
-          <h3>Desasignar formulario resuelto</h3>
+          <h3>Desresolver formulario</h3>
           <div id="msgdes"></div>
         </div>
         <div class="modal-footer">
@@ -128,9 +128,9 @@
                 <a href="" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="/admin/formularios/desasignar" method="POST">
+                <form action="" id="unres" method="POST">
                   <input type="hidden" id="iddesa" name="idform" value="">
-                  <button type="submit" class="btn btn-danger w-100">Desasignar formulario</button>
+                  <button type="submit" class="btn btn-danger w-100">Desresolver formulario</button>
                 </form>
               </div>
             </div>
