--- a/src/views/admin/oficinas/edit.ejs
+++ b/src/views/admin/oficinas/edit.ejs
@@ -81,15 +81,14 @@
           </div>
         </div>
       </div>
-      <%- include('../../partials/footer') %>
     </div>
+    <%- include('../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
   <script src="/js/admin/oficinas/addEdit.js"></script>
   <script>
-    const elemUpd = document.getElementById('upd');
-    elemUpd.setAttribute('action', `/admin/oficinas/update?part=${getCookie('filtro')}`)
+    document.getElementById('upd').setAttribute('action', `/admin/oficinas/update?part=${getCookie('filtro')}`)
   </script>
 </body>
 
