--- a/src/views/admin/usuarios/index.ejs
+++ b/src/views/admin/usuarios/index.ejs
@@ -114,7 +114,7 @@
           </svg>
           <h3>¿Desea borrar este usuario?</h3>
           <div id="msgbor"></div>
-          <div class="text-muted">Lo que vas a hacer no puede ser recuperado.</div>
+          <div class="text-muted">Los datos se guardan en la base de datos Históricos</div>
         </div>
         <div class="modal-footer">
           <div class="w-100">
@@ -123,7 +123,7 @@
                 <a href="#" class="btn btn-white w-100" data-bs-dismiss="modal">Cancelar</a>
               </div>
               <div class="col">
-                <form action="#" id="del" method="POST">
+                <form action="#" id="delet" method="POST">
                   <input type="hidden" id="idusua" name="idusua" value="">
                   <button type="submit" class="btn btn-danger w-100" id="btnUpdate">Borrar usuario</button>
                 </form>
