--- a/src/views/user/formularios/asignados/edit.ejs
+++ b/src/views/user/formularios/asignados/edit.ejs
@@ -25,158 +25,157 @@
 
 <body>
   <div class="page">
-    <%- include('../../partials/header') %>
-      <%- include('../../partials/navbar', {opcion: 'FORMULARIO' }) %>
-        <div class="page-wrapper">
-          <div class="page-header d-print-none">
-            <div class="container-xl">
-              <div class="row g-2 align-items-center">
-                <div class="col">
-                  <div class="page-pretitle">
-                    Modificar
-                  </div>
-                  <h2 class="page-title">
-                    Formulario
-                  </h2>
-                </div>
+    <%- include('../../../partials/header') %>
+    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
+    <div class="page-wrapper">
+      <div class="page-header d-print-none">
+        <div class="container-xl">
+          <div class="row g-2 align-items-center">
+            <div class="col">
+              <div class="page-pretitle">
+                Modificar
               </div>
-            </div>
-          </div>
-          <div class="page-body">
-            <div class="container-xl">
-              <div class="row">
-                <div class="card">
-                  <form action="#" id="upd" method="POST" onsubmit="return validate();">
-                    <input type="hidden" name="idform" value="<%= datos.formulario.IDFORM %>">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-2">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <label class="form-label required">NIF/NIE</label>
-                              <input type="text" name="nifcon" id="nifcon" class="form-control"
-                                style="text-transform: uppercase;" value="<%- datos.formulario.NIFCON %>" autofocus />
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-6">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <label class="form-label required">Nombre</label>
-                              <input type="text" name="nomcon" id="nomcon" class="form-control"
-                                style="text-transform: uppercase;" value="<%- datos.formulario.NOMCON %>" />
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="mb-1">
-                            <label class="form-label">Correo electrónico</label>
-                            <input type="text" name="emacon" id="emacon" class="form-control" value="<%- datos.formulario.EMACON %>" />
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-5">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <div class="form-label required">Tipo</div>
-                              <select class="form-select form-control" id="cbotip" name="tipfor" value="<%- datos.formulario.TIPFOR %>">
-                                <% datos.tipos.map(element=> { %>
-                                  <option value="<%- element.IDTIPO %>" <%- element.IDTIPO===datos.formulario.TIPFOR ? "selected" :"" %>>
-                                    <%- element.DESTIP %>
-                                  </option>
-                                  <% }) %>
-                              </select>
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <label class="form-label required">Referencia</label>
-                              <input type="text" name="reffor" id="reffor" class="form-control" value="<%- datos.formulario.REFFOR %>" />
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-2">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <label class="form-label required">Ejercicio</label>
-                              <input type="number" name="ejefor" id="ejefor" class="form-control" value="<%- datos.formulario.EJEFOR %>" />
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-1">
-                          <div class="mb-1">
-                            <label class="form-label">Adm</label>
-                            <input type="text" name="funfor" id="funfor" class="form-control" value="<%- datos.formulario.FUNFOR %>" readonly />
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-6">
-                          <div class="mb-1">
-                            <div class="form-label">Oficina</div>
-                            <select class="form-select form-control" id="cboofi" name="ofifor" value="<%- datos.formulario.OFIFOR %>">
-                              <% datos.oficinas.map(element=> { %>
-                                <option value="<%- element.IDOFIC %>" <%- element.IDOFIC===datos.formulario.OFIFOR ? "selected" :" disabled" %>>
-                                  <%- element.DESOFI %>
-                                </option>
-                              <% }) %>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="col-3">
-                          <div class="mb-1">
-                            <label class="form-label">Teléfono</label>
-                            <input type="text" name="telcon" id="telcon" class="form-control" value="<%- datos.formulario.TELCON %>" />
-                          </div>
-                        </div>
-                        <div class="col-3">
-                          <div class="mb-1">
-                            <div class="input-control">
-                              <label class="form-label">Movil</label>
-                              <input type="text" name="movcon" id="movcon" class="form-control" value="<%- datos.formulario.MOVCON %>" />
-                              <div class="invalid-feedback"></div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-12">
-                          <div class="mb-1">
-                            <label class="form-label">Observaciones</label>
-                            <textarea type="text" name="obsfor" id="obsfor" class="form-control" rows="3"
-                              style="resize: vertical"><%- datos.formulario.OBSFOR %></textarea>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card-footer text-end">
-                      <div class="d-flex">
-                        <a href="/user/formularios/asignados" class="btn btn-white">Cancelar</a>
-                        <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
+              <h2 class="page-title">
+                Formulario
+              </h2>
             </div>
           </div>
         </div>
-        <%- include('../../partials/footer') %>
+      </div>
+      <div class="page-body">
+        <div class="container-xl">
+          <div class="row">
+            <div class="card">
+              <form action="#" id="upd" method="POST" onsubmit="return validate();">
+                <input type="hidden" name="idform" value="<%= datos.formulario.IDFORM %>">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">NIF/NIE</label>
+                          <input type="text" name="nifcon" id="nifcon" class="form-control"
+                            style="text-transform: uppercase;" value="<%- datos.formulario.NIFCON %>" autofocus />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Nombre</label>
+                          <input type="text" name="nomcon" id="nomcon" class="form-control"
+                            style="text-transform: uppercase;" value="<%- datos.formulario.NOMCON %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <label class="form-label">Correo electrónico</label>
+                        <input type="text" name="emacon" id="emacon" class="form-control" value="<%- datos.formulario.EMACON %>" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-5">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <div class="form-label required">Tipo</div>
+                          <select class="form-select form-control" id="cbotip" name="tipfor" value="<%- datos.formulario.TIPFOR %>">
+                            <% datos.tipos.map(element=> { %>
+                              <option value="<%- element.IDTIPO %>" <%- element.IDTIPO===datos.formulario.TIPFOR ? "selected" :"" %>>
+                                <%- element.DESTIP %>
+                              </option>
+                              <% }) %>
+                          </select>
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Referencia</label>
+                          <input type="text" name="reffor" id="reffor" class="form-control" value="<%- datos.formulario.REFFOR %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-2">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Ejercicio</label>
+                          <input type="number" name="ejefor" id="ejefor" class="form-control" value="<%- datos.formulario.EJEFOR %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-1">
+                      <div class="mb-1">
+                        <label class="form-label">Adm</label>
+                        <input type="text" name="funfor" id="funfor" class="form-control" value="<%- datos.formulario.FUNFOR %>" readonly />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="mb-1">
+                        <div class="form-label">Oficina</div>
+                        <select class="form-select form-control" id="cboofi" name="ofifor" value="<%- datos.formulario.OFIFOR %>">
+                          <% datos.oficinas.map(element=> { %>
+                            <option value="<%- element.IDOFIC %>" <%- element.IDOFIC===datos.formulario.OFIFOR ? "selected" :" disabled" %>>
+                              <%- element.DESOFI %>
+                            </option>
+                          <% }) %>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="mb-1">
+                        <label class="form-label">Teléfono</label>
+                        <input type="text" name="telcon" id="telcon" class="form-control" value="<%- datos.formulario.TELCON %>" />
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label">Movil</label>
+                          <input type="text" name="movcon" id="movcon" class="form-control" value="<%- datos.formulario.MOVCON %>" />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="mb-1">
+                        <label class="form-label">Observaciones</label>
+                        <textarea type="text" name="obsfor" id="obsfor" class="form-control" rows="3"
+                          style="resize: vertical"><%- datos.formulario.OBSFOR %></textarea>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer text-end">
+                  <div class="d-flex">
+                    <a href="/user/formularios/asignados" class="btn btn-white">Cancelar</a>
+                    <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%- include('../../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
   <script src="/js/user/formularios/asignados/addEdit.js"></script>
   <script>
-    const elemAdd = document.getElementById('upd');
-    elemAdd.setAttribute('action', `/user/formularios/update?part=${getCookie('filtro')}`)
+    document.getElementById('upd').setAttribute('action', `/user/formularios/asignados/update?part=${getCookie('filtro')}`)
   </script>
 </body>
 
