--- a/src/views/user/formularios/pendientes/edit.ejs
+++ b/src/views/user/formularios/pendientes/edit.ejs
@@ -25,8 +25,8 @@
 
 <body>
   <div class="page">
-    <%- include('../../partials/header') %>
-    <%- include('../../partials/navbar', {opcion: 'FORMULARIO' }) %>
+    <%- include('../../../partials/header') %>
+    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/user/formularios/asignados" class="btn btn-white">Cancelar</a>
+                    <a href="/user/formularios/pendientes" class="btn btn-white">Cancelar</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
                   </div>
                 </div>
@@ -169,7 +169,7 @@
         </div>
       </div>
     </div>
-    <%- include('../../partials/footer') %>
+    <%- include('../../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
